--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,13 @@ h2 {
   color: white;
   padding-top: 10px;
 }
+h3 {
+  font-size: 18px;
+  color: #ec6e4d;
+  font-weight: 600;
+  margin-bottom: 0px;
+  margin-top: 10px;
+}
 ul {
   margin: 0;
   padding: 0;
@@ -96,6 +103,7 @@ img {
 }
 .weather-details {
   color: white;
+  font-size: 20px;
 }
 .condition {
   text-transform: capitalize;
@@ -105,7 +113,7 @@ img {
 }
 
 .weather-forecast {
-  margin-top: 20px;
+  margin-top: 8px;
   text-align: center;
 }
 .weather-forecast-box {
@@ -119,11 +127,12 @@ img {
 .weather-forecast-date {
   font-size: 14px;
   color: white;
+  margin-top: 3px;
 }
 .weather-forecast-temperature {
   color: white;
   font-size: 14px;
 }
 .weather-forecast-temp-min {
-  opacity: 0.6;
+  opacity: 0.7;
 }
